--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=480"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/wasm_karel.ico" />
     <title>Karel WebAssembly IDE</title>
     
     <!-- CSS Libraries dal progetto originale -->
